--- a/cn.zh-CN/用户指南/运营工作台/资产注册.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产注册.md
@@ -6,13 +6,13 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**运营工作台**，在顶部菜单栏单击**资产目录**。
+2.  在左侧选择**运营工作台**，在顶部菜单栏单击**资产注册**。
 
 3.  在云计算资源管理列表，选择待订阅的数据源，单击**开启订阅**。
 
     ![数据源端配置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3827160161/p211887.png)
 
-4.  在开启提醒页面，再次确认后，单击**确定**，页面显示操作成功。
+4.  在开启提醒页面，再次确认后，单击**确定**。
 
     **说明：**
 
