--- a/cn.zh-CN/用户指南/数据资产中心/资产目录/数据表.md
+++ b/cn.zh-CN/用户指南/数据资产中心/资产目录/数据表.md
@@ -2,15 +2,15 @@
 
 本章节介绍如何查看数据表资产。
 
-数据表已编目上线。
+数据表已编目公开。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在左侧选择**数据资产中心**，在顶部菜单栏单击**资产目录**，在顶部页签选择**数据表**。
 
-3.  在数据表页面目录区域，选择**自定义目录**，出现该目录下的数据表及信息。
+3.  在数据表页面目录区域，选择已新建的目录，出现该目录下的数据表及信息。
 
-4.  在数据表页面数据表区域，选择**数据表**。
+4.  在数据表页面数据表区域，单击数据表名称。
 
     ![数据资产目录表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8827160161/p211884.png)
 
