--- a/cn.zh-CN/用户指南/数据资产中心/资产目录/标签.md
+++ b/cn.zh-CN/用户指南/数据资产中心/资产目录/标签.md
@@ -2,17 +2,17 @@
 
 本章节介绍如何查看标签资产。
 
-标签已编目上线。
+标签已编目公开。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在左侧选择**数据资产中心**，在顶部菜单栏单击**资产目录**，在顶部页签选择**标签**。
 
-3.  在数据表页面数据表区域，选择**标签**。
+3.  在标签页面目录区域，选择已新建的目录，出现该目录下的数据表及信息。
 
     ![资产目录标签1.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5147899061/p206897.png)
 
-4.  在标签详情页面，显示基本信息与自定义属性等信息。
+4.  在数据表页面数据表区域，单击标签名称，显示基本信息与自定义属性等信息。
 
     ![资产目录标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1927160161/p211885.png)
 
