--- a/cn.zh-CN/用户指南/运营工作台/资产管理/表资产管理.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产管理/表资产管理.md
@@ -12,15 +12,15 @@
 
 3.  在资产对象管理页面，选择需要编目的资产对象，单击**修改目录**。
 
-4.  在修改类目页面，单击**添加所属目录**选择已新增所属目录，操作完成后单击**确定**。
+4.  在修改目录页面，单击**添加所属目录**，选择已新增所属目录，操作完成后单击**确定**。
 
-    ![表资产对象管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2303950161/p211877.png)
+    ![表资产管理.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3599579161/p269145.png)
 
 5.  表资产编目完成后，在表资产管理页面：
 
-    -   单击**上线**，可在资产目录中查看到已上线的表资产。
-    -   单击**下线**，下线已上线的表资产。
+    -   单击**公开**，可在资产目录中查看到已公开的表资产。
+    -   单击**隐藏**，隐藏已公开的表资产。
     -   选择多条需要编目的表资产，单击**批量修改目录**，在修改类目页面，单击**添加所属目录**选择已新增所属目录，操作完成后单击**确定**。
-    -   选择多条需要上线的表资产，单击**批量上线**，单击**批量上线**。
-    -   选择多条需要下线的表资产，单击**批量下线**，单击**批量下线**。
+    -   选择多条需要公开的表资产，单击**批量公开**。
+    -   选择多条需要隐藏的表资产，单击**批量隐藏**。
 
