--- a/cn.zh-CN/用户指南/运营工作台/资产管理/标签资产管理.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产管理/标签资产管理.md
@@ -10,15 +10,15 @@
 
 3.  在资产对象管理页面，选择需要编目的资产对象，单击**修改目录**。
 
-4.  在修改类目页面，单击**添加所属目录**选择已新增所属目录，操作完成后单击**确定**。
+4.  在修改目录页面，单击**添加所属目录**，选择已新增所属目录，操作完成后单击**确定**。
 
-    ![标签资产管理.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5387899061/p206870.png)
+    ![标签资产管理.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7305170261/p269148.png)
 
 5.  标签资产编目完成后，在标签资产管理页面：
 
-    -   单击**上线**，可在资产目录中查看到已上线的标签资产。
-    -   单击**下线**，下线已上线的标签资产。
+    -   单击**公开**，可在资产目录中查看到已公开的标签资产。
+    -   单击**隐藏**，隐藏已公开的标签资产。
     -   选择多条需要编目的标签资产，单击**批量修改目录**，在修改类目页面，单击**添加所属目录**选择已新增所属目录，操作完成后单击**确定**。
-    -   选择多条需要上线的标签资产，单击**批量上线**。
-    -   选择多条需要下线的标签资产，单击**批量下线**。
+    -   选择多条需要公开的标签资产，单击**批量公开**。
+    -   选择多条需要隐藏的标签资产，单击**批量隐藏**。
 
