--- a/cn.zh-CN/用户指南/运营工作台/资产管理/资产目录.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产管理/资产目录.md
@@ -30,8 +30,8 @@
 
         ![子目录新建.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7887899061/p204969.png)
 
-    -   选择已新建的目录，单击**![修改.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7887899061/p204963.png)图标（编辑）**,对目录的基础信息进行修改，操作完成后单击**确定**。
-    -   选择已新建的目录，单击**![删除.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7887899061/p204968.png)图标（删除）**,出现删除提醒，操作完成后单击**确定**。
+    -   选择已新建的目录，单击**![修改.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7887899061/p204963.png)图标**,对目录的基础信息进行修改，操作完成后单击**确定**。
+    -   选择已新建的目录，单击**![删除.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7887899061/p204968.png)图标**,出现删除提醒，操作完成后单击**确定**。
 
         ![数据目录管理.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7887899061/p204970.png)
 
