--- a/cn.zh-CN/快速入门/添加数据处理节点.md
+++ b/cn.zh-CN/快速入门/添加数据处理节点.md
@@ -86,7 +86,7 @@
 
     3.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)**图标，单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)**图标，查看运行日志。
 
-5.  单击**![返回](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205667.png)**，页面返回到**节点管理**页面，查看新建的节点。
+5.  单击**![1](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6937270261/p272632.png)**，页面返回到**节点管理**页面，查看新建的节点。
 
     ![查看节点](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1889060161/p207477.png)
 
@@ -103,6 +103,6 @@
 
     2.  选中输出表表名，查看物理表数据预览。
 
-        ![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1889060161/p207468.png)
+        ![数据探查分析.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5300679161/p270186.png)
 
 
