--- a/cn.zh-CN/快速入门/标签圈群.md
+++ b/cn.zh-CN/快速入门/标签圈群.md
@@ -12,12 +12,14 @@
 
 2.  在页面顶部左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **数据资产中心** \> **资产应用** \> **画像分析**。
 
-3.  在顶部菜单栏单击**标签圈群**，进入标签圈群页面。
+3.  在顶部菜单栏单击**标签圈群**，进入圈选条件页面。
 
 4.  单击**选择数据源**，在数据源列表选择云计算资源，单击**确定**。
 
-5.  选择实体类型，在**实体标签**页面，设置标签的条件，单击**确定**，选中并集框，继续设置标签的条件，单击**确定**，单击页面**圈选条件**后的**查询**后出现当前圈定群体数量，单击**开始圈群**。
+5.  选择圈群方式：可通过设置圈选条件或获取全量个体的方式圈群。
 
+    -   群选条件圈群：单击**实体类型**下拉列表，选择实体类型。单击**实体标签**，选中需要圈选的标签，并单击该标签下拉列表，设置标签的条件，单击**确定**，选中并集框，继续设置标签的条件，单击**确定**。
+    -   获取全量个体：单击**获取全量个体**。
     圈选条件设置：
 
     |实体类型|圈选逻辑|圈选标签|圈选条件|
