--- a/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md
+++ b/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md
@@ -18,7 +18,7 @@
 -   [申请外网地址](https://help.aliyun.com/document_detail/26128.html?spm=a2c4g.11186623.2.34.708540a8dzSOaO)。
 -   [创建账号和数据库](https://help.aliyun.com/document_detail/87038.html?spm=a2c4g.11186623.2.35.708540a8dzSOaO)。
 -   [连接MySQL实例](https://help.aliyun.com/document_detail/26138.html?spm=a2c4g.11186623.6.669.303238f8gRrN8t)。
--   在RDS数据库建表和插入语句，详细参见[准备数据](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   在RDS数据库建表和插入语句，详细参见[准备数据](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 
 **操作步骤**
 
@@ -68,7 +68,7 @@
 
 如果您需要将MaxCompute中的数据接入数据资源平台，还需要在MaxCompute项目中完成数据表的创建和数据导入。
 
--   在MaxCompute数据库建表和插入语句，详细参见[准备数据](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   在MaxCompute数据库建表和插入语句，详细参见[准备数据](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 -   创建MaxCompute数据表方法参见[创建表](https://help.aliyun.com/document_detail/27808.html?spm=a2c4g.11186623.6.597.31c26620pTTWQt)。
 -   数据导入MaxCompute数据表方法参见[导入数据](https://help.aliyun.com/document_detail/27809.html?spm=a2c4g.11186623.6.598.2cc746fevRps1u)。
 
