--- a/cn.zh-CN/最佳实践/数据汇聚.md
+++ b/cn.zh-CN/最佳实践/数据汇聚.md
@@ -2,7 +2,7 @@
 
 本章以MySQL到MaxCompute链路为例，为您介绍新增离线数据同步任务，同步RDS数据源中的数据对象到MaxCompute。
 
--   您已经在MySQL数据库中新建表格YHKH和XYK\_BKXX，并插入数据。具体操作，请参见[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   您已经在MySQL数据库中新建表格YHKH和XYK\_BKXX，并插入数据。具体操作，请参见[YHKH](/cn.zh-CN/最佳实践/准备工作/准备数据.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 -   您已经新建工作组。具体操作，请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
 -   您已经新建云计算资源，详细参见。具体操作，请参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
 
