--- a/cn.zh-CN/最佳实践/数据建模/设计字段标准.md
+++ b/cn.zh-CN/最佳实践/数据建模/设计字段标准.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍如何新建数据字典、质量校验函数和数据元。
 
-您已新建云计算资源，详细请参见：[新建MaxCompute云计算资源]()。
+您已新建云计算资源。详细操作，请参见：[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
 
 设计字段标准为设计数据模型做准备。
 
@@ -10,67 +10,77 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台** \> **资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7847900161/p208215.png)**图标，进入数据标准页面。
+2.  在页面右上角单击**![导航图标](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)**图标，选择**研发工作台**，进入**研发工作台**页面。
 
-3.  单击左侧导航栏**字段标准设计** \> **数据字典管理** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**按钮，进入数据字典管理页面。
+3.  在主菜单中选择**资产加工**，在左侧导航栏单击**![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5889159161/p268956.png)** \> **字段标准设计**，将鼠标悬浮在**数据字典管理**，单击**![图标001](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268819.png)**图标。
 
-4.  在**数据字典管理**页面，单击右上角**+新建数据字典**。
+4.  新建数据字典。
 
-5.  弹出**基础信息**页面根据提示输入编码、参考数据集名称等信息，操作完成后单击**下一步**。
+    1.  在**数据字典管理**页面，单击右上角**新建数据字典**。
 
-6.  弹出**数据字典**页面，单击**+新增数据字典**，并输入值编码、值名称，单击**+新增数据字典**可添加多个数据字典值，完成后单击**确定**。
+    2.  在页面右侧**基础信息**面板，根据提示输入编码、参考数据集名称等基础信息，操作完成后单击**下一步**。
 
-    新建数据字典配置如下：
+    3.  单击**新增数据字典**，并输入值编码、值名称。单击**新增数据字典**可添加多个数据字典值。
 
-    |编码|参考数据集名称|值编码|值名称|
-    |--|-------|---|---|
-    |XZ\_CODE\_0001|婚姻状况|00|已婚|
-    |01|未婚|
-    |XZ\_CODE\_0002|性别|1|男|
-    |2|女|
-    |XZ\_CODE\_0003|教育水平|00|研究生|
-    |01|本科|
-    |02|高中|
-    |03|职业高中|
-    |04|职业学院|
-    |XZ\_CODE\_0004|职业|00|保险|
-    |01|教师|
-    |02|外企白领|
-    |03|自由职业|
-    |04|IT工程师|
+        新建数据字典配置如下：
 
-7.  在**数据字典管理**列表查看新建的数据字典。
+        |编码|参考数据集名称|值编码|值名称|
+        |--|-------|---|---|
+        |XZ\_CODE\_0001|婚姻状况|00|已婚|
+        |01|未婚|
+        |XZ\_CODE\_0002|性别|1|男|
+        |2|女|
+        |XZ\_CODE\_0003|教育水平|00|研究生|
+        |01|本科|
+        |02|高中|
+        |03|职业高中|
+        |04|职业学院|
+        |XZ\_CODE\_0004|职业|00|保险|
+        |01|教师|
+        |02|外企白领|
+        |03|自由职业|
+        |04|IT工程师|
+
+    4.  配置完成后，单击**确定**。
+
+    5.  参考[4.a](#substep_eia_2u9_03i)~[4.d](#substep_u7s_3zp_87w)，新建更多数据字典。
+
+5.  在**数据字典管理**列表查看新建的数据字典。
 
     ![数据字典管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7847900161/p206889.png)
 
-8.  物理化数据字典：勾选新建的数据字典，单击**物理化**。
+6.  物理化数据字典。
 
-    1.  弹出**物理化数据字典**的**预览**页面，单击**下一步**。
+    1.  在**数据字典管理**页面，勾选新建的数据字典，单击**物理化**。
+
+        ![物理化](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3084949161/p268382.png)
+
+    2.  弹出**物理化数据字典**的**预览**页面，单击**下一步**。
 
         ![物理数据字典预览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7847900161/p206890.png)
 
-    2.  进入**配置**页面，选择云计算资源类型和云计算资源，单击**下一步**。
+    3.  进入**配置**页面，选择云计算资源类型和云计算资源，单击**下一步**。
 
-    3.  进入**执行**页面，单击**开始执行**。
+    4.  进入**执行**页面，单击**开始执行**。
 
-    4.  等待数据字典物理化成功，单击**确定**。
+    5.  等待数据字典物理化成功，单击**确定**。
 
-9.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台** \> **资产加工** \> **![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8847900161/p208216.png)** \> **物理表探查**，进入物理表探查页面。
+7.  查看物理表数据。
 
-    1.  选中**MaxCompute**下的云计算资源，输入字典表表名。
+    1.  在左侧导航栏单击**![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3844159161/p268872.png)** \> **物理表探查** \> **MaxCompute**，选中**MaxCompute**下的云计算资源。
 
-    2.  选中字典表表名，查看物理表数据预览。
+    2.  在云计算资源页面的目标表**操作**列，单击**数据预览**，查看物理表数据详情。
 
-        ![物理化值](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8061429061/p205803.png)
+        ![物理化表格详情](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0698759161/p269058.png)
 
 
 ## 新建质量校验函数并物理化
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台** \> **资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7847900161/p208215.png)**图标，进入数据标准页面。
+2.  在页面左上角单击**![导航图标 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)**图标，选择**研发工作台**，进入**研发工作台**页面。
 
-3.  单击左侧导航栏**字段标准设计** \> **质量校验函数** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**按钮，进入质量校验函数管理页面。
+3.  在主菜单中选择**资产加工**，在左侧导航栏单击**![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5889159161/p268956.png)** \> **字段标准设计**，将鼠标悬浮在**质量校验函数**，单击**![图标001](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268819.png)**图标。
 
 4.  在**质量校验函数**页面，单击**新建函数**。
 
@@ -80,7 +90,7 @@
 
     |资源名称|资源Code|资源类型|资源文件|
     |----|------|----|----|
-    |手机号码校验|sjhmjy|MaxCompute|Jar包：源代码请查看[质量校验函数jar包源代码](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)|
+    |手机号码校验|sjhmjy|MaxCompute|Jar包：源代码请查看[质量校验函数jar包源代码](/cn.zh-CN/最佳实践/准备工作/准备数据.md)|
 
     ![新建资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8061429061/p203961.png)
 
@@ -121,9 +131,9 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台** \> **资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7847900161/p208215.png)**图标，进入数据标准页面。
+2.  在页面左上角单击**![导航图标 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)**图标，选择**研发工作台**，进入**研发工作台**页面。
 
-3.  单击左侧导航栏**字段标准设计** \> **数据元管理** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**，进入数据元管理页面。
+3.  在主菜单中选择**资产加工**，在左侧导航栏单击**![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5889159161/p268956.png)** \> **字段标准设计**，将鼠标悬浮在**数据元管理**，单击**![图标001](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268819.png)**图标。
 
 4.  在**数据元管理**页面，单击**新建数据元**。
 
