--- a/cn.zh-CN/最佳实践/数据建模/设计数据模型.md
+++ b/cn.zh-CN/最佳实践/数据建模/设计数据模型.md
@@ -3,7 +3,7 @@
 本章节为您介绍如何设计数据模型。
 
 -   您已设计字段标准，详细请参见：[设计字段标准](/cn.zh-CN/最佳实践/数据建模/设计字段标准.md)。
--   您已经在MaxCompute创建表[stg\_base\_yhkh\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[stg\_base\_xykbkjl\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   您已经在MaxCompute创建表[stg\_base\_yhkh\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)和[stg\_base\_xykbkjl\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 
 设计数据模型并且物理化为ETL代码数据加工做准备。
 
