--- a/cn.zh-CN/最佳实践/语义建模与画像分析/语义建模.md
+++ b/cn.zh-CN/最佳实践/语义建模与画像分析/语义建模.md
@@ -4,7 +4,7 @@
 
 1.  您已经新建工作组，详细请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
 2.  您已经新建计算资源，详细请参见[新建云计算资源](/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md)。
-3.  您已经在MaxCompute数据库插入表[dws\_ren\_kh\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[dws\_wp\_xyk\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+3.  您已经在MaxCompute数据库插入表[dws\_ren\_kh\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)和[dws\_wp\_xyk\_di](/cn.zh-CN/最佳实践/准备工作/准备数据.md)。
 
 语义建模主要为您介绍新建标签模型、加工衍生标签、标签同步和上线标签，为之后的标签资产做支撑。
 
@@ -39,15 +39,14 @@
         |---|--|
         |表名|dws\_ren\_kh\_di|
 
-    4.  配置映射：勾选所有字段，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性值**，填写所有标签业务口径和使用方，单击**确定**，并配置标签类型，所有操作完成后单击**确认** 。
+    4.  配置映射：勾选所有字段，单击**主标签**开关开启主标签，若在右上角单击自定义设置，添加了其他属性，可单击**修改自定义属性**，批量填写所有标签自定义的属性，单击**确定**，并配置标签类型，所有操作完成后，单击**确认** 。
 
         配置映射配置项：
 
         |配置项|示例|
         |---|--|
         |主标签|zzhm|
-        |业务口径|原生|
-        |使用方|营销部|
+        |dataq|原生|
         |标签类型|设置hyzk、xb、career和jysp为"枚举值"。|
         |普通标签|表上其他字段|
 
@@ -78,15 +77,13 @@
         |---|--|
         |表名|dws\_wp\_xyk\_di|
 
-    6.  配置映射：勾选所有字段，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性值**，填写所有标签业务口径和使用方，单击**确定**，所有操作完成后单击**确认** 。
+    6.  配置映射：勾选所有字段，单击**主标签**开关开启主标签，若在右上角单击自定义设置，添加了其他属性，可单击**修改自定义属性**，批量填写所有标签自定义的属性，单击**确定**，所有操作完成后单击**确认** 。
 
         配置映射配置项：
 
         |配置项|示例|
         |---|--|
         |主标签|cid|
-        |业务口径|原生|
-        |使用方|营销部|
         |普通标签|表上其他字段|
 
         **说明：**
@@ -127,7 +124,7 @@
 
 3.  在左侧导航栏单击**标签工厂** \> **标签方案**，单击**新建标签方案**。
 
-4.  弹出**新建标签方案**页面，填写方案名称和描述、选择方案类型为**TQL模式**，单击**完成**。
+4.  弹出**新建标签方案**页面，填写方案名称和描述，选择方案类型为**TQL模式**，单击**完成**。
 
     新建方案配置项：
 
@@ -141,7 +138,7 @@
         TQL语句：
 
         ```
-        select count(xyk.cid) as 数量,xyk.rid as 证件号from xyk group by xyk.rid;
+        select count(xyk.cid) as 数量,xyk.rid as 证件号 from xyk group by xyk.rid;
         ```
 
         **说明：** select 后面需带绑定对象的主标签才可开启输出表关联标签。
@@ -154,7 +151,7 @@
 
         -   单击**执行的SQL**，查看执行的SQL语句。
         -   单击**步骤详情**，查看执行的每一步耗时。
-        对返回结果设置输出表关联标签：在页面右侧**标签配置**下，单击**![开启](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204888.png)**开启**输出表关联标签**，选择绑定对象，在**绑定标签名**的”证件号码“选择绑定对象主标签。
+        对返回结果设置输出表关联标签：在页面右侧**标签配置**下，打开**输出表关联**开关，选择绑定对象，在**绑定标签名**的”证件号“选择绑定对象主标签。
 
         |配置项|说明|示例|
         |---|--|--|
@@ -163,9 +160,9 @@
 
         ![标签配置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204889.png)
 
-        对返回标签新建标签：单击**绑定标签名**下的**新建标签**，填写标签名称、code和业务口径，单击**完成**。
+        对返回标签新建标签：单击**绑定标签名**下的**新建标签**，填写标签名称、标签code和dataq，单击**完成**。
 
-        ![新建标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204891.png)
+        ![新建标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3877479161/p269147.png)
 
         新建标签配置项：
 
@@ -173,7 +170,7 @@
         |---|--|--|
         |标签名称|衍生标签名称|持卡数量|
         |标签code|衍生标签code|cksl|
-        |业务口径|标签业务口径|衍生|
+        |dataq|标签业务口径|衍生|
 
         在**绑定标签名**下可查看新建标签。
 
@@ -181,7 +178,7 @@
 
         单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**。
 
-    2.  进入**离线任务配置**，选择调度类型为：一次性调度，单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**。
+    2.  进入**离线任务配置**，选择调度类型为：立即运行，单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**。
 
     3.  进入**预览保存**页面，可以查看标签方案配置信息，单击页面右上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120841.png)**。
 
@@ -191,7 +188,7 @@
 
     ![查看方案](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204900.png)
 
-6.  单击新建的标签方案后的**提交**，等待标签方案**状态**变为**已提交**。
+6.  单击新建的标签方案后的**提交**，等待标签方案**状态**变为![完成](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4877479161/p269152.png)。
 
 7.  单击新建的标签方案后的**执行**，弹出**运行参数配置**，选择**立即运行**，单击**确定**。
 
@@ -236,9 +233,6 @@
         |---|--|--|
         |目标表名|客户自定义|tb\_yhkh|
         |表描述|客户自定义|银行客户|
-        |中转云计算资源|标签同步将分布在不同云计算资源上的源标签数据都同步到目标云计算资源上，这些数据会先在中转云计算资源自动合并起来，然后再同步到目标云计算资源。|ODPS|
-
-        ![同步表设置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2867900161/p204920.png)
 
     4.  在**保存预览**页面：预览同步计划信息，单击**保存**。
 
@@ -265,18 +259,16 @@
 
 5.  在顶部菜单栏单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **运营工作台** \> **资产管理** \> **资产对象管理** \> **标签资产管理**列表查看所有上线标签。
 
-    ![查看标签资产](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2867900161/p205011.png)
-
 
 ## 创建标签API
 
-一般生产API的数据是实时查询类资源，把同步到RDS的标签数据，其他应用可以方便的调用API来获取数据。
+将标签生成API，可供其他应用通过调用API来获取数据，从而节省数据传播的成本。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在顶部菜单栏单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台** \> **资产加工** \> **![语义建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p208221.png)**，进入语义建模页面。
 
-3.  在左侧导航栏单击**分析引擎** \> **查询调试**页面。
+3.  在左侧导航栏单击**分析引擎** \> **查询调试**，进入**查询调试**页面。
 
 4.  选择云计算资源，输入TQL语句。
 
