--- a/cn.zh-CN/最佳实践/数据治理/设计字段标准.md
+++ b/cn.zh-CN/最佳实践/数据治理/设计字段标准.md
@@ -78,7 +78,7 @@
 
     |资源名称|资源Code|资源类型|资源文件|
     |----|------|----|----|
-    |手机号码校验|sjhmjy|MaxCompute|Java包：源代码请查看[质量校验函数jar包源代码](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)|
+    |手机号码校验|sjhmjy|MaxCompute|Java包：源代码请查看[质量校验函数jar包源代码](/cn.zh-CN/最佳实践/准备工作/准备数据.md)|
 
     ![新建资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8061429061/p203961.png)
 
