--- a/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md
+++ b/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md
@@ -84,7 +84,7 @@
 
     1.  选中**MaxCompute**下的云计算资源，输入加工后节点输出表表名。
 
-    2.  选中输出表表名，查看物理表数据预览。
+    2.  单击物理表**操作**列**数据预览**，查看物理表数据预览。
 
         ![探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0661429061/p205927.png)
 
