--- a/cn.zh-CN/最佳实践/数据治理/治理后模型质量检测.md
+++ b/cn.zh-CN/最佳实践/数据治理/治理后模型质量检测.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍逻辑表治理后的质量检测。
 
-您已经完成数据加工，详细请参见：[添加公共节点数据加工](/cn.zh-CN/最佳实践/数据治理/添加公共节点数据加工.md)。
+您已经完成数据加工，详细请参见：[添加计算节点数据加工](/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md)。
 
 对数据治理后的数据进行质量检测，查看是否满足字段标准。
 
