--- a/cn.zh-CN/产品简介/功能特性/研发工作台/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/数据同步.md
@@ -6,7 +6,7 @@
 
 -   通过注册数据源端与目标端，测试网络连通性后实现对客户业务数据库的数据抽取；支持Oracle、MySQL、SQL Server、Oracle实时、MySQL实时等多种类型的数据源与目标端。
 -   支持对已配置的数据源与目标端提供元数据同步及详情查看，帮助用户了解元数据资产内容。
--   提供对工作组内的数据源及元数据同进行同步，并支持详情查看，帮助用户了解元数据资产内容。
+-   提供对本工作组内的数据源中元数据进行同步，并支持详情查看，帮助用户了解元数据资产内容。
 
 ## 数据模板管理
 
