--- a/cn.zh-CN/产品简介/功能特性/研发工作台/数据探查.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/数据探查.md
@@ -8,5 +8,5 @@
 
 ## 标签探查
 
-支持对业务标签可视化设置筛选条件查询功能。支持对查询的数据结果导出和生成API,支持对查询的结果生成图表，支持图表数据导出、生成API和导出图表，支持多个云计算资源的标签查询。
+支持对业务标签可视化设置筛选条件查询功能。支持对查询的数据结果导出和生成API，支持对查询的结果生成图表，支持图表数据导出、生成API和导出图表，支持多个云计算资源的标签查询。
 
