--- a/cn.zh-CN/快速入门/新建标签模型.md
+++ b/cn.zh-CN/快速入门/新建标签模型.md
@@ -40,15 +40,13 @@
         |---|--|
         |表名|ods\_base\_yhkh|
 
-    4.  配置映射：勾选所有字段，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性值**，填写所有标签业务口径和使用方，单击**确定**，并修改标签类型，所有操作完成后单击**确认** 。
+    4.  配置映射：勾选所有未绑定字段，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签。若在右上角单击**自定义设置**，添加了其他属性，可单击**修改自定义属性**，批量填写所有标签自定义的属性，单击**确定**。
 
         配置映射配置项：
 
         |配置项|示例|
         |---|--|
         |主标签|证件号码|
-        |业务口径|原生|
-        |使用方|营销部|
         |值类型|设置教育水平-标准值说明、婚姻状况-标准值说明、职业-标准值说明和性别-标准值说明为"枚举值"。|
         |普通标签|表上其他字段|
 
