--- a/cn.zh-CN/产品简介/功能特性/研发工作台/任务运维.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/任务运维.md
@@ -4,8 +4,8 @@
 
 ## 数据同步任务
 
--   **离线同步实例：**对周期任务的任务名称、实例ID、实例开始时间、实例结束时间、实例耗时、实例速率、实例状态、实例进度信息进行展示，并可以实现单任务执行状态的监控，当前实例状态监控，并对周期任务执行报错进行日志跟踪，支持周期任务重跑。
--   **实时同步实例：**对实时任务的任务名称、实例ID、实例开始时间、实例结束时间、实例耗时、实例速率、实例状态、实例进度信息进行展示，并可以实现单任务执行状态的监控，当前实例状态监控，并对执行报错的实时任务进行日志跟踪。
+-   **离线同步实例：**对周期任务的任务名称、实例ID、实例开始时间、实例结束时间、实例耗时、实例速率、实例状态等信息进行展示，并可以实现单任务执行状态的监控，当前实例状态监控，并对周期任务执行报错进行日志跟踪，支持周期任务重跑。
+-   **实时同步实例：**对实时任务的任务名称、数据源分类、实例开始时间、实例结束时间、实例耗时、实例速率、实例状态等信息进行展示，并可以实现单任务执行状态的监控，当前实例状态监控，并对执行报错的实时任务进行日志跟踪。
 
 ## 标签加工任务
 
