--- a/cn.zh-CN/产品简介/功能特性/研发工作台/解决方案.md
+++ b/cn.zh-CN/产品简介/功能特性/研发工作台/解决方案.md
@@ -1,6 +1,20 @@
 # 解决方案
 
-通过解决方案内容详情查看及实例化等功能，便于对数据资源平台解决方案进行维护管理。
+包括：数据建模、语义建模数据服务的导入、导出等功能。
 
-提供对数据标准、模型等内容的统一跨项目导入导出操作，便于进行数据标准、模型、ETL代码的跨项目复用，帮助用户快速完成数据治理工作的初始化。
+## 数据建模导入导出
+
+提供对数据标准、模型等内容的统一跨项目导入导出操作，便于进行数据标准、逻辑表、ETL代码的跨项目复用，帮助用户快速完成数据治理工作的初始化。
+
+## 语义建模导入导出
+
+-   **标签列表：**支持对标签导出、全表导出操作，并展示导出状态等信息。
+-   **标签导入记录：**支持对标签导入操作，并展示导入状态等信息。
+-   **标签API列表：**支持对标签API导出、全表导出操作，并展示导出状态等信息。
+-   **标签API导入记录：**支持对标签API导入操作，并展示导入状态等信息。
+
+## 数据服务导入导出
+
+-   **API列表：**支持对数据API、三方API、上报API导出操作，并展示导出状态等信息。
+-   **导入记录：**支持对数据API、三方API、上报API导入操作，并展示导入状态等信息。
 
