--- a/cn.zh-CN/产品简介/功能特性/运营工作台/资产应用.md
+++ b/cn.zh-CN/产品简介/功能特性/运营工作台/资产应用.md
@@ -1,6 +1,6 @@
 # 资产应用
 
-目前资产应用模块主要包括：画像分析功能。画像分析即：为数据分析人员、业务人员支持的一站式群体分 析平台。涵盖画像分析的全链路，主要包括基于标签的群体圈选、 群体计算、多状态群体发布等，支持用户建立单个体 档案，从而实现用户对于目标群体的精准定位。
+目前资产应用模块主要包括：画像分析功能。画像分析即：方便数据分析人员、业务人员使用的一站式群体分析平台。涵盖画像分析的全链路，主要包括基于标签的群体圈选、 群体计算、多状态群体发布等，支持用户建立单个体档案，从而实现用户对于目标群体的精准定位。
 
 ## 智能搜索
 
@@ -15,7 +15,7 @@
 
 ## 群体管理
 
--   **群体列表：**支持群体统一管理。支持对群体信息进行新建、删除、更新、状态变更、查看、编辑、查看不同类型群体个数和占比等操作。新建群体支持标签圈群、导入本地文件和群体计算三种方式。可实现单个个体多维信息展示，并支持临时打标签能力，具有该临时标签的个体，可以在智能搜索模块被搜索；支持导入excel格式的群体列表到画像中，进行群体的分析。导入前提，该excel所含有的标签和值，已经在数据库中存在。支持群体详情和个体详情查看。
+-   **群体列表：**支持群体统一管理。支持对群体信息进行新建、删除、更新、状态变更、查看、编辑、查看不同类型群体个数和占比等操作。新建群体支持标签圈群、导入本地文件和群体计算三种方式。可实现单个个体多维信息展示，并支持临时打标签能力，具有该临时标签的个体，可以在智能搜索模块被搜索；支持导入excel格式的群体列表到画像中，进行群体的分析。导入前提，该EXCEL所含有的标签和值，已经在数据库中存在。支持用户在详情页面中，查看群体详情和个体详情信息。
 -   **群体运维：**支持发布静态和动态群体，在数据库一次性和周期落表的任务运维管理。
 -   **群体计算：**通过图形化的计算方式可实现两个群体交并差计算得到新的群体。对群体结果支持查看详细群体、发布API、静态、动态和实时群体。
 
