--- a/cn.zh-CN/产品简介/什么是数据资源平台.md
+++ b/cn.zh-CN/产品简介/什么是数据资源平台.md
@@ -12,10 +12,11 @@
     -   **表加工：**提供通用的代码编辑页面，灵活地进行个性化的数据编码研发，完成任务的发布，基于场景的编排。
     -   **算法服务：**提供算法综合管理平台，通过对算法部署、接入、调试、调用等过程的一体化管理， 算法服务实现算法与应用的解耦、算法复用。应用可以基于标准化产品的统一接口快速封装解决方案，提高算法工程化效率。
     -   **语义建模：**可将治理后的数据以业务化视角进行建模、查看、管理及使用，并提供业务衍生标签的自定义功能，为上层应用提供统一的标签数据目录和标签调用接口，沉淀上层应用制作的模型标签，实现高价值标签共享复用，形成标签运营生态。
+    -   **统一服务：**面向数据开发者提供覆盖各个加工阶段统一体验的、便捷的数据服务封装、管理、运维能力；面向应用开发者提供统一服务目录、跨部门的服务共享交换能力；面向数据服务管理者提供服务的运营运维能力。
     -   **质量评估：**根据数据模型中相关质量规则，设置并执行质量检测任务，获取质量评估量规则运行结果，实现对数据质量的全方位评估，并通过数据质量监控报告展现数仓中各层级数据的质量情况。
     -   **解决方案：**提供对数据标准、模型等内容的统一跨项目导入导出操作，便于进行数据标准、模型、ETL代码的跨项目复用，帮助用户快速完成数据治理工作的初始化。
 -   **资产运营**
-    -   **资产注册：**支持平台侧需管理的数据资产注册功能，用户可选择需要管理的数据资产来源作为管理输入，支持对多个数据源端进行展现订阅；可定期自动订阅数据表、标签等资产的信息。
+    -   **资产注册：**支持平台侧需管理的数据资产注册功能，用户可选择需要管理的数据资产来源作为管理输入，支持对多个数据源端进行展现订阅；可定期自动订阅数据表、标签、API等资产的信息。
     -   **资产管理：**支持按资产类型分别维护资产，帮助资产目录内容提供者对各类资产进行管理维护，并针对资产进行编目分类及发布上下线管控。
 -   **数据资产中心**
     -   **资产全景（概览）：**提供统一的数据资源视图，以可视化方式直观体现数据资源平台价值，让管理者从资产全景业务全局视角认知数据接入、融合、加工处理链路，精准定位业务应用所依赖的数据。
