--- a/cn.zh-CN/常见问题/语义建模.md
+++ b/cn.zh-CN/常见问题/语义建模.md
@@ -24,3 +24,9 @@ keyword: [语义建模, 标签, 实体, 事件, 关系]
 
 值码表支持OLAP类关系型数据库，支持RDS、ADS、Oracle、SQL Server、PostgreSQL。
 
+## 对象绑表后，是否支持修改主标签和普通标签？
+
+不支持，只可在绑表时指定。
+
+若需修改，请先解绑表，并重新绑表，指定主标签和普通标签。绑表操作请参见[绑表管理](/cn.zh-CN/用户指南/语义建模/标签模型/绑表管理.md)。
+
