--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -16,6 +16,10 @@
 
     ![数据同步链路](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4347160161/p224532.png)
 
+    **说明：**
+
+    “√”代表支持，其他则为不支持。
+
 -   目前系统支持的批量任务链路：
 
     ![数据链路批量图.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4347160161/p224533.png)
@@ -35,8 +39,8 @@
 
 ## 场景
 
--   **计算节点:**目前系统支持Maxcompute、ZergStandalon、ZergService。
--   **数据同步:**目前系统支持RDS、Hive、Maxcompute、MangoDB、Oracle、SQLServer。
+-   **计算节点：**目前系统支持Maxcompute、ZergStandalon、ZergService。
+-   **数据同步：**目前系统支持RDS、Hive、Maxcompute、MangoDB、Oracle、SQLServer。
 
 ## 标签模型
 
@@ -53,4 +57,8 @@
 ## 画像分析
 
 目前系统支持：RDS、Hive、Maxcompute、MySQL、SQLServer、MangoDB。
+
+## 统一服务
+
+目前系统支持：ApsaraDB for RDS、MaxCompute 、 AnalyticDB MySQL、Table Store、DataHub、Object Storage Service、RocketMQ AnalyticDB PostgreSQL 。
 
