--- a/cn.zh-CN/产品简介/基本概念.md
+++ b/cn.zh-CN/产品简介/基本概念.md
@@ -32,11 +32,11 @@
 
 **存储资源：**可以存储数据的资源，包括离线存储、在线存储。单机中也可以视为一种存储资源，数据存储的形式为文件。
 
-**算法：**场景加工中的算法有五个要素：计算资源、代码、输入数据、输出数据和参数。代码可在计算资源上执行（代码是否需要编译由计算资源决定）；输入数据、输出数据由SDF定义；参数用于控制算法的执行。在使用算法配置算 法流程时，流程中连接上下游算法的线表示算法的输入和输出数据，而算法参数需要通过单独的界面进行配置。
+**算法：**场景加工中的算法有五个要素：计算资源、代码、输入数据、输出数据和参数。代码可在计算资源上执行（代码是否需要编译由计算资源决定）；输入数据、输出数据由数据格式（SDF）定义；参数用于控制算法的执行。在使用算法配置算 法流程时，流程中连接上下游算法的线表示算法的输入和输出数据，而算法参数需要通过单独的界面进行配置。
 
 **算法流程：**算法流程通过有向无环的流程图（DAG）描述，定义了一段处理逻辑。算法流程中所有算法的输入、输出数据都是具体的数据表、文件和数据流。
 
-**测试环境与线上环境：**每个工作区都有一个测试场景和一个线上场景，它们是两套独立的资源配置。算法工程师只能在开发测试环境中注册算法，配置算法 流程，并进行测试。测试通过后要经过上线操作才能把测试环境中的算法流程发布到生产环境中。任何人都不能编辑生产环境中的算法流程，但可以修改参数，所有修改都会记录在日志中。
+**测试环境与线上环境：**每个工作区都有一个测试场景和一个线上场景，它们是两套独立的资源配置。算法工程师只能在开发测试环境中注册算法，配置算法流程，并进行测试。测试通过后要经过上线操作才能把测试环境中的算法流程发布到生产环境中。任何人都不能编辑生产环境中的算法流程，但可以修改参数，所有修改都会记录在日志中。
 
 **场景依赖：**是指同工作区下跨场景间的离线计算节点的周期调度依赖，用于配置周期调度中场景间的离线节点执行依赖关系，进行正确顺序的离线作业计算。
 
