--- a/cn.zh-CN/产品简介/功能特性/数据资产中心.md
+++ b/cn.zh-CN/产品简介/功能特性/数据资产中心.md
@@ -1,18 +1,19 @@
 # 数据资产中心
 
-包括：概览、资产目录功能。
+包括：概览、资产目录、资产应用功能。
 
 ## 概览
 
 对数据资产的全局及增量指标进行统计、展示。
 
--   支持数据表、标签资产类型，精确或模糊搜索数据资产。
+-   支持数据表、标签、API资产类型，精确或模糊搜索数据资产。
 -   支持数据资产资产总量、今日新增等全局指标展示，并以趋势图的形式展示增量信息。
--   支持数据表、标签等资产分类型展示指标与增量信息。
+-   支持数据表、标签、API等资产分类型展示指标与增量信息。
 
 ## 资产目录
 
--   支持数据表、标签资产类型，精确或模糊搜索数据资产。
--   支持数据资产资产总量、今日新增等全局指标展示，并以趋势图的形式展示增量信息。
--   支持数据表、标签等资产分类型展示指标与增量信息。
+-   支持按资产类型、云计算资源、所属工作组、所属项目、更新时间等查询条件，搜索数据表、标签、API等数据资产。
+-   支持对数据表资产的字段信息、数据预览、血缘关系、详细说明进行展示。
+-   支持对标签进行申请，并展示基本信息、自定义属性。
+-   支持对API进行申请，并展示基本信息、应用请求、响应示例、用户评价。
 
