--- a/cn.zh-CN/产品简介/功能特性/系统设置.md
+++ b/cn.zh-CN/产品简介/功能特性/系统设置.md
@@ -1,16 +1,16 @@
 # 系统设置
 
-包括：工作组管理、用户管理、权限列表、我的申请、我的审批功能。
+支持工作组、云计算资源、成员的创建及管理，为数据资源平台的运行、使用提供了必要的基础保障。
 
 ## 工作组管理
 
 -   **工作组管理：**支持工作组的创建、管理，以达到各工作组之间空间隔离的效果。
 -   **云计算资源管理：**支持多个类型的云计算资源的新建管理。
--   **成员管理：**支持对账号的相应工作组管理员、工作组开发者、工作组分析员、工作组访客进行配置。
+-   **成员管理：**支持对账号的相应工作组管理员、工作组开发者、工作组分析员、工作组访客等进行配置。
 
 ## 用户管理
 
-支持对人员账号相应的租户管理员、租户访客、租户资产管理员、租户运维角色进行添加、管理。
+支持对人员账号相应的租户管理员、租户访客、租户资产管理员、租户运维等角色进行添加、管理。
 
 ## 权限列表
 
@@ -18,9 +18,9 @@
 
 ## 我的申请
 
-提供查看到账号申请使用的标签信息；通过筛选审批状态，对提交的申请进行查看详情和撤回申请操作，并支持申请单详情查看的功能。
+提供查看到账号申请使用的标签、API信息；通过筛选审批状态，对提交的申请进行查看详情和撤回申请操作，并支持申请单详情查看的功能。
 
 ## 我的审批
 
-提供工作组可以查看到其他账号申请的标签的使用的审批操作，对申请的内容进行查看、通过和拒绝操作，并支持未审批、已审批查看审批单详情查看。
+提供工作组可以查看到其他账号申请的标签、API的使用的审批操作，对申请的内容进行查看、通过和拒绝操作，并支持未审批、已审批查看审批单详情查看。
 
