--- a/cn.zh-CN/用户指南/数据标准/全局设置/业务域.md
+++ b/cn.zh-CN/用户指南/数据标准/全局设置/业务域.md
@@ -18,7 +18,7 @@
 
     1.  将鼠标移至业务域，单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2521067061/p188899.png)**图标，选择**新建目录**。
 
-    2.  在**新建目录**页面，根据提示输入名字 、标识和描述。
+    2.  在**新建业务域目录**页面，根据提示输入名字 、标识和描述。
 
     3.  单击**确认**。
 
@@ -34,7 +34,7 @@
 
 6.  新建完成后，可对新建的业务域进行如下操作。
 
-    -   详情：单击**详情**，可查看业务域的详情信息。
-    -   编辑：选中需要编辑的业务域，单击**编辑**，修改业务域名称、标识或描述信息后，单击**确认**。
-    -   删除：选中需要删除的业务域，单击**删除**，在删除提示页面，单击**确认**，删除业务域。
+    -   详情：单击业务域所在行的**详情**，可查看业务域的详情信息。
+    -   编辑：单击业务域所在行的**编辑**，修改业务域名称或描述信息后，单击**确认**。
+    -   删除：单击业务域所在行的**删除**，在删除提示页面，单击**确认**，删除业务域。
 
