--- a/cn.zh-CN/最佳实践/准备工作/准备数据.md
+++ b/cn.zh-CN/最佳实践/准备工作/准备数据.md
@@ -43,7 +43,7 @@ insert into xyx_bkxx values (1,'XYK-1001',5,'1514736000','渠道1','CKR-1000'), 
 DDL语句：
 
 ```
-create table if not exists `stg_base_yhkh_di` ( `id` bigint comment '主键', `zzhm` string comment '证件号码', `khmc` string comment '客户名称', `nl` bigint comment '年龄', `xb` bigint comment '性别 0:男 1:女', `yddh1` string comment '移动电话1', `csrq` string comment '出生日期', `jysp` bigint comment '教育水平 0:研究生 1:本科 2:高中 3:职业高中 4:职业学院', `career` bigint comment '职业 0:保险 1:教师 2:外企白领 3:自由职业 4:it工程师', `hyzk` bigint comment '婚姻状况 0:已婚 1:未婚', `gz` bigint comment '工资', `decdbyjyje` bigint comment '大额存单本月交易金额', `decdbyjybs` bigint comment '大额存单本月交易笔数', `zjzdjyrq` string comment '最近主动交易日期', `jtnsr` bigint comment '家庭年收入', `dqckcy` bigint comment '定期存款持有' ) comment '银行客户信息' ;
+create table if not exists 'stg_base_yhkh_di' ( 'id' bigint comment '主键', 'zzhm' string comment '证件号码', 'khmc' string comment '客户名称', 'nl' bigint comment '年龄', 'xb' bigint comment '性别 0:男 1:女', 'yddh1' string comment '移动电话1', 'csrq' string comment '出生日期', 'jysp' bigint comment '教育水平 0:研究生 1:本科 2:高中 3:职业高中 4:职业学院', 'career' bigint comment '职业 0:保险 1:教师 2:外企白领 3:自由职业 4:it工程师', 'hyzk' bigint comment '婚姻状况 0:已婚 1:未婚', 'gz' bigint comment '工资', 'decdbyjyje' bigint comment '大额存单本月交易金额', 'decdbyjybs' bigint comment '大额存单本月交易笔数', 'zjzdjyrq' string comment '最近主动交易日期', 'jtnsr' bigint comment '家庭年收入', 'dqckcy' bigint comment '定期存款持有' ) comment '银行客户信息' ;
 ```
 
 插入数据语句：
@@ -57,7 +57,7 @@ insert into stg_base_yhkh_di values (1,'CKR-1000','谢敏',33,0,'(86)31934620595
 DDL语句：
 
 ```
-create table if not exists `stg_base_xykbkjl_di` ( `id` bigint comment '主键', `cid` string comment '卡id', `climit` bigint comment '卡额度', `actdate` bigint comment '统计日期', `channel` string comment '办卡渠道', `rid` string comment '持卡人id' ) comment '信用卡信息' ;
+create table if not exists 'stg_base_xykbkjl_di' ( 'id' bigint comment '主键', 'cid' string comment '卡id', 'climit' bigint comment '卡额度', 'actdate' bigint comment '统计日期', 'channel' string comment '办卡渠道', 'rid' string comment '持卡人id' ) comment '信用卡信息' ;
 ```
 
 插入数据语句：
@@ -71,7 +71,7 @@ insert into stg_base_xykbkjl_di values (1,'XYK-1001',5,1514736000,'渠道1','CKR
 DDL语句：
 
 ```
-create table if not exists dws_ren_kh_di ( `id` bigint comment '主键', `zzhm` string comment '证件号码', `khmc` string comment '客户名称', `nl` bigint comment '年龄', `xb` string comment '性别', `yddh1` string comment '移动电话1', `csrq` string comment '出生日期', `jysp` string comment '教育水平', `career` string comment '职业', `hyzk` string comment '婚姻状况', `gz` bigint comment '工资', `decdbyjyje` bigint comment '大额存单本月交易金额', `decdbyjybs` bigint comment '大额存单本月交易笔数', `zjzdjyrq` string comment '最近主动交易日期', `jtnsr` bigint comment '家庭年收入', `dqckcy` bigint comment '定期存款持有' ) comment '银行客户信息' ;
+create table if not exists dws_ren_kh_di ( 'id' bigint comment '主键', 'zzhm' string comment '证件号码', 'khmc' string comment '客户名称', 'nl' bigint comment '年龄', 'xb' string comment '性别', 'yddh1' string comment '移动电话1', 'csrq' string comment '出生日期', 'jysp' string comment '教育水平', 'career' string comment '职业', 'hyzk' string comment '婚姻状况', 'gz' bigint comment '工资', 'decdbyjyje' bigint comment '大额存单本月交易金额', 'decdbyjybs' bigint comment '大额存单本月交易笔数', 'zjzdjyrq' string comment '最近主动交易日期', 'jtnsr' bigint comment '家庭年收入', 'dqckcy' bigint comment '定期存款持有' ) comment '银行客户信息' ;
 ```
 
 插入数据语句：
@@ -85,7 +85,7 @@ insert into dws_ren_kh_di values (1,"CKR-1000","谢敏",33,"男","331934620595",
 DDL语句：
 
 ```
-create table if not exists `dws_wp_xyk_di` ( `id` bigint comment '主键', `cid` string comment '卡', `climit` bigint comment '卡额度', `actdate` string comment '统计日期', `channel` string comment '办卡渠道', `rid` string comment '持卡人id', `age` string comment '年龄', `gender` string comment '性别', `career` string comment '职业' ) comment '信用卡信息' ;
+create table if not exists 'dws_wp_xyk_di' ( 'id' bigint comment '主键', 'cid' string comment '卡', 'climit' bigint comment '卡额度', 'actdate' string comment '统计日期', 'channel' string comment '办卡渠道', 'rid' string comment '持卡人id', 'age' string comment '年龄', 'gender' string comment '性别', 'career' string comment '职业' ) comment '信用卡信息' ;
 ```
 
 插入数据语句：
