--- a/cn.zh-CN/用户指南/系统设置/用户管理.md
+++ b/cn.zh-CN/用户指南/系统设置/用户管理.md
@@ -1,34 +1,90 @@
-# 用户管理
+用户管理 
+=========================
 
-本章节介绍如何对全局成员进行添加、管理。
+通过用户管理功能，对用户实现账号和角色权限控制，包括添加成员、编辑成员和查看用户详情。
 
-已建立权限账号。
+前提条件 
+-------------------------
 
-1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+已创建权限账号。
 
-2.  单击账号下拉列表，选择**系统设置**。
+添加成员 
+-------------------------
 
-3.  在左侧导航栏，单击**用户管理**。
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-4.  在用户管理页面，单击**添加成员**。
+   
 
-5.  在添加成员页面，输入成员配置信息，操作完成后，单击**确定**。
+2. 在页面右上角单击账号名称，选择 **系统设置** 。
 
-    ![添加成员](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6527160161/p217620.png)
+   
 
-    |输入项|说明|
-    |---|--|
-    |人员|由新建账号输入，通过下拉列表的方式进行选择。|
-    |角色|包括租户管理员、租户访客、租户数据资产管理员、租户运维人员和租户一般用户。|
+3. 在左侧导航栏，单击 **用户管理** 。
 
-6.  成员新建完成后，可查看详情、修改角色和删除成员。
+   
 
-    ![用户管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6527160161/p217623.png)
+4. 在用户管理页面，单击 **添加成员** 。
 
-    -   删除成员：在目标成员**角色**列，单击角色后面的**![删除](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7925140161/p208488.png)**按钮，可删除添加的成员。
-    -   修改角色：在目标成员**角色**列，单击角色选择栏，可添加成员。
+   
 
-        ![修改角色](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6527160161/p217628.png)
+5. 在添加成员页面，选择人员和角色。![添加成员](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6527160161/p217620.png)
 
-    -   详情：在目标成员**操作**列，单击**详情**，可查看用户成员详细信息。
+   
+
+   | 参数 |                  说明                   |
+   |----|---------------------------------------|
+   | 人员 | 选择待添加权限的账号。                           |
+   | 角色 | 包括租户管理员、租户访客、租户数据资产管理员、租户运维人员和租户一般用户。 |
+
+   
+
+6. 选择完成后，单击 **确定** 。
+
+   
+
+
+
+
+编辑成员角色 
+---------------------------
+
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+
+   
+
+2. 在页面右上角单击账号名称，选择 **系统设置** 。
+
+   
+
+3. 在左侧导航栏，单击 **用户管理** 。
+
+   
+
+4. 在用户列表 **角色** 列中，对目标用户的角色进行增加、删除。
+
+   
+
+
+
+
+查看用户详情 
+---------------------------
+
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+
+   
+
+2. 在页面右上角单击账号名称，选择 **系统设置** 。
+
+   
+
+3. 在左侧导航栏，单击 **用户管理** 。
+
+   
+
+4. 在用户列表操作列中，单击 **详情** ，查看用户成员详细信息。
+
+   
+
+
 
