--- a/cn.zh-CN/用户指南/系统设置/应用管理/查看密钥.md
+++ b/cn.zh-CN/用户指南/系统设置/应用管理/查看密钥.md
@@ -1,27 +1,53 @@
-# 查看密钥
+查看密钥 
+=========================
 
 本章节介绍如查看、管理应用的密钥信息。
 
-1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+操作步骤 
+-------------------------
 
-2.  单击账号下拉列表，选择**系统设置**。
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-3.  在左侧导航栏，单击**应用管理**。
+   
 
-4.  在应用管理页面，选择待查看密钥的信息，单击**查看密钥**。
+2. 单击账号下拉列表，选择 **系统设置** 。
 
-    ![查看密钥](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9483160261/p271238.png)
+   
 
-5.  在查看密钥页面，可以禁用、启用、删除和新建密钥等。
+3. 在左侧导航栏，单击 **应用管理** 。
 
-    -   禁用密钥：选择需要禁用的密钥，单击**禁用**，在禁用提醒页面，单击**禁用**。
+   
 
-        ![禁用密钥](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8655359951/p162249.png)
+4. 在应用管理列表 **操作** 列中，单击目标应用的 **查看密钥** 。![查看密钥](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7540413261/p281818.png)
 
-    -   启用密钥：选中已禁用的密钥，单击**重启**，在启用提醒页面，单击**启用**。
-    -   新建密钥：单击**新建密钥**，输入密钥信息和描述后，单击**确认**。
-    -   删除密钥：选中需要删除的密钥，单击**删除**，出现删除提醒信息，单击**删除**。
+   
 
-        ![删除密钥](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0583160261/p271239.png)
+5. 在查看密钥页面，可以禁用、启用、删除和新建密钥等。
+
+   * 禁用密钥：在密钥列表 **操作** 列中，单击目标密钥的 **禁用** ，在禁用提醒页面，单击 **禁用** 。 ![禁用密钥](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8655359951/p162249.png)
+
+     
+   
+   * 启用密钥：在密钥列表 **操作** 列中，单击目标密钥的 **启用** ，在启用提醒页面，单击 **启用** 。
+
+     
+   
+   * 新建密钥：单击 **新建密钥** ，密钥列表中自动新增一条密钥。
+
+     
+   
+   * 删除密钥：在密钥列表 **操作** 列中，单击目标密钥的 **删除** ，出现删除提醒信息，单击 **删除** 。
+
+     
+   
+   *
+     **说明**
+
+     禁用状态的密钥才能执行删除操作。
+     
+   
+
+   
+
 
 
