--- a/cn.zh-CN/用户指南/系统设置/应用管理/删除应用.md
+++ b/cn.zh-CN/用户指南/系统设置/应用管理/删除应用.md
@@ -1,19 +1,30 @@
-# 删除应用
+删除应用 
+=========================
 
 本章节介绍如何删除应用。
 
-已完成应用创建。
+操作步骤 
+-------------------------
 
-1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  单击账号下拉列表，选择**系统设置**。
+   
 
-3.  在左侧导航栏，单击**应用管理**。
+2. 在页面右上角单击账号名称，选择 **系统设置** 。
 
-4.  在应用管理页面，选择待删除的应用，单击**删除**。
+   
 
-5.  在删除提醒页面，单击**确定**。
+3. 在左侧导航栏，单击 **应用管理** 。
 
-    ![删除应用](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9955359951/p162259.png)
+   
+
+4. 在应用列表 **操作** 列中，选择 **更多** \> **删除** 。
+
+   
+
+5. 在弹出的对话框中，单击 **确定** 。
+
+   
+
 
 
