--- a/cn.zh-CN/用户指南/数据同步/新建数据模板.md
+++ b/cn.zh-CN/用户指南/数据同步/新建数据模板.md
@@ -1,22 +1,53 @@
-# 新建数据模板
+新建数据模板 
+===========================
 
-本章节介绍如何通过创建数据模板来解释消息中间件中消息的结构。
+当消息中间件作为数据源时，需要通过创建数据模板来解释消息中间件中消息的结构。
 
-在系统设置已创建工作组。
+操作步骤 
+-------------------------
 
-1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据同步.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7838239061/p204224.png)图标（数据同步）** \> **数据模板管理** \> **![详情.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0697899061/p204404.png)**。
+   
 
-3.  在数据模板管理页面，单击**创建模板**。
+2. 在页面左上角单击![导航图标 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)图标，选择 **研发工作台** ，单击顶部菜单 **资产加工** 。
 
-4.  在**新增模板**面板中，输入名称和描述，单击**添加字段**输入数据字段，操作完成后，单击**确定**。
+   
 
-    ![新增模板](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9599630261/p271389.png)
+3. 在顶部菜单栏，单击![选择工作组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8779023261/p282243.png)图标，选择目标工作组。
 
-5.  数据模板新建完成后，在模板管理页面：
+   
 
-    -   单击**查看**，查看基础信息、数据字段。
-    -   单击**编辑**，对基础信息、数据字段进行编辑，操作完成后单击**确定**。
-    -   单击**删除**，出现删除提醒，操作完成后单击**确定**。
+4. 在左侧导航栏单击![数据同步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8779023261/p282268.png) \> **同步数据源** \> **数据模板管理** 。
+
+   
+
+5. 在模板管理页面右上角，单击 **新建模板** 。
+
+   
+
+6. 在 **新增模板** 面板中，输入名称和描述，单击 **添加字段** 输入数据字段。![新增模板](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6898733261/p283022.png)
+
+   
+
+7. 操作完成后，单击 **确定** 。
+
+   
+
+
+
+
+相关任务 
+-------------------------
+
+在模板管理页面，可对模板进行以下操作：
+
+
+|   任务   |                       操作说明                       |
+|--------|--------------------------------------------------|
+| 查看模板详情 | 在模板列表 **操作** 列中，单击目标模板的 **查看** ，可查看模板的基础信息和数据字段。 |
+| 编辑模板   | 在模板列表 **操作** 列中，单击目标模板的 **编辑** ，可对模板的信息进行编辑。     |
+| 删除模板   | 在模板列表 **操作** 列中，单击目标模板的 **删除** ，可将模板从列表中删除。      |
+
+
 
