--- a/cn.zh-CN/用户指南/数据探查/标签探查.md
+++ b/cn.zh-CN/用户指南/数据探查/标签探查.md
@@ -1,54 +1,95 @@
-# 标签探查
+标签探查 
+=========================
 
-本章介绍如何查询标签。
+通过对标签设置筛选条件，对数据进行探查，并对查询结果进行分析，快速了解标签数据详情及分布情况。此外，还可以将探查结果保存为API。
 
--   确保在云计算资源上已经创建实体/关系的标签。
--   设置标签值类型。
+前提条件 
+-------------------------
 
-快查可以对标签通过拖拽的方式快速生成API，并支持查询结果分析和图表信息导出和生成API。
+* 确保在云计算资源上已经创建实体/关系的标签。
 
-1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+  
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据探查.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9794259161/p268473.png)图标（数据探查）** \> **标签探查**。
+* 设置标签值类型。
 
-3.  在标签探查页面，选择**选择云计算资源类型** \> **选择云计算资源**。
+  
 
-4.  在添加筛选条件区域，将要查询的标签拖至指定区域，填写或选择筛选条件，单击**查看数据**。
 
-    ![标签探查.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7799390161/p225480.png)
 
-    **说明：**
 
-    查询结果的查看标签支持布尔值标签。
+操作步骤 
+-------------------------
 
-5.  在查看结果区域：
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-    -   单击**查看tql**，可查看筛选条件TQL和SQL语句。
+   
 
-        ![查看SQL.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225464.png)
+2. 在页面左上角单击![导航图标 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)图标，选择 **研发工作台** ，单击顶部菜单 **资产加工** 。
 
-    -   单击**查询过程**可查看查询的耗时。
+   
 
-        ![查询过程.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225466.png)
+3. 在顶部菜单栏，单击![选择工作组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8779023261/p282243.png)图标，选择目标工作组。
 
-    -   单击**导出**可对查询结果导出excel格式到本地。
-6.  单击**保存为API**，填写API名称、path、分组和描述，单击**确定**。
+   
 
-    ![生成API.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225469.png)
+4. 在左侧导航栏单击![shujutancha](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7329223261/p282452.png) \> **标签探查** 。
 
-7.  单击**API列表**可查看发布的API。
+   
 
-    ![发布API.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225470.png)
+5. 在 **标签探查** 页面，选择目标云计算资源。
 
-8.  **生成图表：**选择X轴、Y轴、聚合函数和统计图表，单击**确定**。
+   
 
-    ![图表设置.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225474.png)
+6. 在添加筛选条件区域，将要查询的标签拖至指定区域，填写或选择筛选条件。![biaoqiantancha](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4592923261/p282528.png)
 
-    -   单击**保存为API**，填写API名称、path、分组和描述，单击**确定**。
-    -   单击**导出图表**，对图表保存到本地。
-    -   单击**导出数据**，图表数据导出excel格式到本地。
-    -   单击**顺序**或**倒序**可对图表排序。
+   
 
-        ![查看图表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225472.png)
+7. 单击 **查看数据** ，在 **已选标签数据集** 区域，查看标签探查结果。![chakanshuju](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4592923261/p282546.png)
+
+   * 查询结果：显示数据探查结果，单击 **查看标签** ，可查看对应标签的reason设置。
+
+     
+   
+   * 查询过程：可查看查询的耗时。
+
+     
+   
+   * 查看tql：可查看筛选条件TQL和SQL语句。
+
+     
+   
+
+   
+
+8. 生成图表查看探查结果。
+
+   1. 在 **图表设置** 区域，选择X轴、Y轴、聚合函数和统计图表类型。
+
+      
+   
+   2. 单击 **确定** ，在 **预览图表** 区域以图表形式查看探查结果。![yulantubiao](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4592923261/p282618.png)
+
+      
+   
+
+   
+
+9. （可选）将探查结果保存为API。
+
+   1. 单击 **保存为API** 。
+
+      
+   
+   2. 在 **生成api** 对话框中，填写API名称、API Path、API分组和描述。![生成API.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225469.png)
+
+      
+   
+   3. 单击 **OK** 。
+
+      
+   
+
+   
+
 
 
