--- a/cn.zh-CN/用户指南/数据探查/物理表探查.md
+++ b/cn.zh-CN/用户指南/数据探查/物理表探查.md
@@ -1,47 +1,120 @@
-# 物理表探查
+物理表探查 
+==========================
 
-本章介绍如何对云计算资源中的物理表进行预览。
+提供不同数据资源的快速预览、SQL查询和一键探查，可为开发人员和数据应用人员提供全面直观的数据呈现。
+
+前提条件 
+-------------------------
 
 已配置云计算资源。
 
-1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
+操作步骤 
+-------------------------
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据探查.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3042679161/p268468.png)数据探查** \> **物理表探查**。
+1. 登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-    ![数据探查-展示.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2902360261/p271893.png)
+   
 
-    **说明：**
+2. 在页面左上角单击![导航图标 ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)图标，选择 **研发工作台** ，单击顶部菜单 **资产加工** 。
 
-    -   更新列表缓存，初始化的时候更新数据源下的数据表。
-    -   搜索栏输入关键词，可以搜出跟该关键词。
-3.  在左侧导航栏，选择**云计算资源类型** \> **云计算资源**。
+   
 
-    **说明：**
+3. 在顶部菜单栏，单击![选择工作组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8779023261/p282243.png)图标，选择目标工作组。
 
-    云计算资源类型支持Maxcompute、MySQL、PostgresSQL。
+   
 
-4.  在物理表探查页面，选择待预览的物理表，单击**数据预览**。
+4. 在左侧导航栏单击![shujutancha](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7329223261/p282452.png) \> **物理表探查** ，选择一个云计算资源。
 
-5.  在数据预览页面，可选择**浏览行数**或**字段名称**，出现搜索结果。
+   **说明**
 
-6.  单击**数据探查**。
+   云计算资源类型支持Maxcompute、MySQL、PostgresSQL和AnalyticDB PostgresSQL。
+   
 
-7.  在数据探查页面，单击**点击开始启动探查**，出现探查结果。
+5. 在物理表探查页面左侧，单击选中待预览的物理表，进行物理表基础信息和数据预览。![物理表探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2927033261/p282474.png)
 
-    ![数据探查分析.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4042679161/p270185.png)
+   * 查看基础信息：在 **物理表基础信息** 区域展示创建时间、资源类型、表大小等基础信息。
 
-    **说明：**
+     
+   
+   * 数据预览：在 **数据预览** 页面，默认展示1000条数据。
 
-    单击**刷新**当前探查结果将被覆盖。
+     **说明**
 
-8.  在全部字段区域，选择其中一个有数据的字段，单击**点击开始启动探查**，出现字段的数据统计，展示包括：字段个数、唯一值、偏斜度、空值率；并支持对频次图中频次的设置，频次图的下载等操作。
+     
+     * 如果是分区表，在 **数据预览** 页面上方选择分区，单击 **检索** ，可切换分区预览数据。
 
-    ![字段探查.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7015679161/p270226.png)
+       
+     
+     * 在 **数据预览** 页面上方，选择字段并设置字段条件 **检索** ，可通过条件筛选预览数据。
 
-    **说明：**
+       
+     
 
-    -   取样条数：如果选择1000，就是取数据库表中默认的前1000条数据。
-    -   在输入字段名称区域输入字段名称，快速筛选出需要探查的字段 。
-    -   字段不同的前icon表示不同的字段类型：绿色为数值、 蓝色为字符、黄色为日期时间等。
-    -   在数据统计下方可以输入数据统计与统计图的描述，并可以以PNG或PDF的方式下载统计图。
+     
+     
+   
+   * SQL查询：在 **SQL查询** 页面，输入SQL语句，单击![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2927033261/p282722.png)图标，可通过SQL查询语句预览数据。![sql查询](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8497733261/p283018.png)
+
+     
+   
+
+   
+
+6. 对物理表进行数据探查。
+
+   1. 在物理表探查页面左下角，单击 **数据探查** 。
+
+      
+   
+   2. 在数据探查页面，查看数据抽样探查结果。![tanchajieguo](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2927033261/p282759.png)
+
+      **说明**
+
+      
+      * 在数据探查页面左侧，设置分区名称（如果是分区表）、取样条数和取样条件，单击 **保存并刷新** ，可根据设置条件进行数据探索。
+
+        
+      
+      * 取样条数如果选择1000，就是取数据库表中默认的前1000条数据。
+
+        
+      
+
+      
+      
+   
+   3. 在 **字段详情** 区域字段列表 **操作** 列中，单击 **字段探查** ，应用系统内置的算法对字段进行探查。
+
+      
+   
+   4. 在字段探查结果页面，查看字段数据探查结果。
+
+      **说明**
+
+      
+      * 目前支持的字段探查类型包括： 
+
+        * 字符串类型：频次图。
+
+          
+        
+        * 数值类型：频次图、直方图分布、百分位图、异常检测图。
+
+          
+        
+
+        
+      
+      * 在每个探查结果区域上方，可编辑名称、添加描述，并支持以PNG或PDF的方式下载探查结果。
+
+        
+      
+
+      
+      
+   
+
+   
+
+
 
