--- a/cn.zh-CN/用户指南/数据标准/字段标准设计/数据字典管理/物理化数据字典.md
+++ b/cn.zh-CN/用户指南/数据标准/字段标准设计/数据字典管理/物理化数据字典.md
@@ -1,6 +1,6 @@
 # 物理化数据字典
 
-本章节为您介绍如何将数据字典物理化到云计算计算资源生成物理表。
+本章节为您介绍如何将数据字典物理化到云计算资源生成物理表。
 
 -   已创建数据字典。
 -   已关联云计算资源。
@@ -11,7 +11,7 @@
 
 2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台**。
 
-3.  单击**资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6358100161/p208862.png)** \> **字段标准设计** \> **数据字典管理**。
+3.  在左侧导航栏单击**资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6358100161/p208862.png)** \> **字段标准设计** \> **数据字典管理**。
 
 4.  单击**![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**图标，进入数据字典管理页面。
 
@@ -21,7 +21,7 @@
 
     ![物理化数据字典-预览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8376160161/p212940.png)
 
-7.  选择云计算资源类型、数据源选择和勾选覆盖已物理化字典后，单击**下一步**。
+7.  选择云计算资源类型、数据源和勾选覆盖已物理化字典后，单击**下一步**。
 
 8.  单击**开始执行**，物理化执行完成后，单击**确定**。
 
