--- a/cn.zh-CN/用户指南/统一服务/服务报表/服务调用汇总.md
+++ b/cn.zh-CN/用户指南/统一服务/服务报表/服务调用汇总.md
@@ -2,18 +2,18 @@
 
 本章节介绍如何使用服务调用汇总。
 
-API被调用。
+API已被调用。
 
--   支持对所有或单个服务以时间范围（最近1天、1周、1个月、3个月、6个月和自定义）和统计周期（15分钟、小时）查询API调用信息。
+-   支持对所有或单个服务以时间范围（最近1天、1周、1个月、3个月、6个月和自定义）和统计周期（15分钟、小时、日、月）查询API调用信息。
 -   支持查看API的统计周期、服务名称、服务类型、所属应用、成功次数/调用总次数、平均响应时间、共享数据总量、明细和调用趋势。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台** \> **资产加工**。
+2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台**。
 
-3.  单击**![统一服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0702579161/p268584.png)** \> **服务报表** \> **服务调用汇总**。
+3.  在顶部菜单栏单击**资产加工**，并在左侧导航栏选择**![统一服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0702579161/p268584.png)** \> **服务报表** \> **服务调用汇总**。
 
-4.  选择服务名称，范围筛选和统计周期，单击**查询**查看结果。
+4.  选择服务名称，时间范围筛选和统计周期，单击**查询**查看结果。
 
     ![调用汇总](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5159449951/p141245.png)
 
