--- a/cn.zh-CN/用户指南/统一服务/监控诊断/实时监控.md
+++ b/cn.zh-CN/用户指南/统一服务/监控诊断/实时监控.md
@@ -2,17 +2,17 @@
 
 本章节介绍如何使用实时监控。
 
-API被调用。
+API已被调用。
 
-对所有API按3小时、12小时和24小时时间段监控调用趋势（总量、成功、成功率）和异常趋势（失败量和限流量），并支持选择监控时间点查看服务概览。
+对所有API按3小时、12小时和24小时时间段监控调用趋势（总量、成功量、成功率）和异常趋势（失败量和限流量），并支持选择监控时间点查看服务概览。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台** \> **资产加工**。
+2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台**。
 
-3.  单击**![统一服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0702579161/p268584.png)** \> **诊断监控** \> **实时监控**。
+3.  在顶部菜单栏单击**资产加工**，并在左侧导航栏选择**![统一服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0702579161/p268584.png)** \> **监控诊断** \> **实时监控**。
 
-4.  选择时间监控范围，查看该时间段的实时监控。
+4.  选择监控时间范围，查看该时间段的实时监控。
 
     -   单击**调用趋势**查看趋势曲线。
 
