--- a/cn.zh-CN/用户指南/统一服务/API管理/已获授权API/调试.md
+++ b/cn.zh-CN/用户指南/统一服务/API管理/已获授权API/调试.md
@@ -2,18 +2,18 @@
 
 本章节介绍如何调试已获授权API。
 
-已新建已获授权API。
+已存在已获授权API。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台** \> **资产加工**。
+2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台**。
 
-3.  单击**![统一服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0702579161/p268584.png)** \> **API管理** \> **API资源**。
+3.  在顶部菜单栏单击**资产加工**，并在左侧导航栏选择**![统一服务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0702579161/p268584.png)** \> **API管理** \> **已获授权API**。
 
-4.  在已获授权API列表，选择待调试的API，单击**调试**。
+4.  在**已获授权API**列表，在待调试的API操作列单击**调试**。
 
-5.  进入调试页面，单击**开始测试**，核对返回内容无误后，单击**返回**，返回API资源列表。
+5.  进入调试页面，单击**开始测试**，核对返回内容无误后，单击**返回**，返回已获授权API列表。
 
-    ![调试API1](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5369540261/p271694.png)
+    ![017](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7948033261/p282046.png)
 
 
