--- a/cn.zh-CN/用户指南/数据标准/通用设置/数据元属性.md
+++ b/cn.zh-CN/用户指南/数据标准/通用设置/数据元属性.md
@@ -41,7 +41,7 @@
 
    
 
-4. 单击 **新建数据元属性** 。 **输入类型** 不同，需配置的参数可能会不同，请根据界面提示完成参数配置。![14523](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282349.png)
+4. 单击 **新建数据元属性** 。 **输入类型** 不同，需配置的参数可能会不同，请根据界面提示完成参数配置置，参数具体说明请参见下表。![14523](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282349.png)
 
    
 
