--- a/cn.zh-CN/用户指南/数据标准/通用设置/表属性.md
+++ b/cn.zh-CN/用户指南/数据标准/通用设置/表属性.md
@@ -33,15 +33,15 @@
 
    
 
-2. 在菜单栏左上角，单击![123.](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3117223261/p280931.png)\> **研发工作台** 。
+2. 在菜单栏左上角，单击![123.](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3117223261/p280931.png) \> **研发工作台** 。
 
    
 
-3. 在顶部菜单栏单击 **资产加工** ，并在左侧导航栏选择![2013](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282315.png)\> **通用设置** \> **表属性** 。
+3. 在顶部菜单栏单击 **资产加工** ，并在左侧导航栏选择![2013](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282315.png) \> **通用设置** \> **表属性** 。
 
    
 
-4. 单击 **新建表属性** 。 **输入类型** 不同，需配置的参数可能会不同，请根据界面提示完成参数配置。![21036](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1901133261/p282319.png)
+4. 单击 **新建表属性** 。 **输入类型** 不同，需配置的参数可能会不同，请根据界面提示完成参数配置，参数具体说明请参见下表。![21036](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1901133261/p282319.png)
 
    
 
@@ -71,11 +71,11 @@
 
    
 
-2. 在菜单栏左上角，单击![123.](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3117223261/p280931.png)\> **研发工作台** 。
+2. 在菜单栏左上角，单击![123.](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3117223261/p280931.png) \> **研发工作台** 。
 
    
 
-3. 在顶部菜单栏单击 **资产加工** ，并在左侧导航栏选择![2013](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282315.png)\> **通用设置** \> **表属性** 。
+3. 在顶部菜单栏单击 **资产加工** ，并在左侧导航栏选择![2013](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282315.png) \> **通用设置** \> **表属性** 。
 
    
 
@@ -96,11 +96,11 @@
 
    
 
-2. 在菜单栏左上角，单击![123.](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3117223261/p280931.png)\> **研发工作台** 。
+2. 在菜单栏左上角，单击![123.](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3117223261/p280931.png) \> **研发工作台** 。
 
    
 
-3. 在顶部菜单栏单击 **资产加工** ，并在左侧导航栏选择![2013](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282315.png)\> **通用设置** \> **表属性** 。
+3. 在顶部菜单栏单击 **资产加工** ，并在左侧导航栏选择![2013](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8881323261/p282315.png) \> **通用设置** \> **表属性** 。
 
    
 
