--- a/cn.zh-CN/用户指南/系统设置/权限列表.md
+++ b/cn.zh-CN/用户指南/系统设置/权限列表.md
@@ -10,12 +10,12 @@
 
 3.  在左侧导航栏，单击**权限列表**。
 
-4.  在权限列表页面，单击顶部Tab标签，可以切换展示数据资源平台或各组件的权限内容。
+4.  在权限列表页面，单击顶部页签名称，可以切换展示数据资源平台或各组件的权限内容。
 
     **说明：**
 
     展示的权限点对应的权限内容和全员成员角色、工作组成员角色相关。
 
-    -   工作组成员管理配置角色包括：工作组管理员、工作组开发者、工作组分析员、工作组访客。
+    -   工作组成员管理配置角色包括：工作组管理员、工作组开发者、工作组分析员。
     -   全局成员管理配置角色包括：租户管理员、 租户访客、租户数据资产管理员、租户运维人员。
 
