--- a/cn.zh-CN/用户指南/系统设置/我的审批.md
+++ b/cn.zh-CN/用户指南/系统设置/我的审批.md
@@ -19,7 +19,7 @@
 
     3.  在审批单详情页面，对审批单进行操作。
 
-    -   通过：单击**通过**，输入审批意见，单击**确认**
+    -   通过：单击**通过**，输入审批意见，单击**确认**。
 
         ![通过](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4627160161/p212489.png)
 
