--- a/cn.zh-CN/用户指南/数据探查/标签探查.md
+++ b/cn.zh-CN/用户指南/数据探查/标签探查.md
@@ -1,21 +1,12 @@
 标签探查 
 =========================
 
-通过对标签设置筛选条件，对数据进行探查，并对查询结果进行分析，快速了解标签数据详情及分布情况。此外，还可以将探查结果保存为API。
+通过对标签设置筛选条件，对数据进行探查，并对查询结果进行分析，快速了解标签数据详情及分布情况。此外，还可以将探查结果和图表信息保存为API。
 
 前提条件 
 -------------------------
 
-* 确保在云计算资源上已经创建实体/关系的标签。
-
-  
-
-* 设置标签值类型。
-
-  
-
-
-
+在云计算资源上已经创建实体/关系的标签。
 
 操作步骤 
 -------------------------
@@ -60,6 +51,10 @@
    
 
    
+   **说明**
+
+   在 **添加筛选条件** 区域单击 **保存为API** ，可将标签探查结果保存为API。
+   
 
 8. 生成图表查看探查结果。
 
@@ -69,23 +64,9 @@
    
    2. 单击 **确定** ，在 **预览图表** 区域以图表形式查看探查结果。![yulantubiao](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4592923261/p282618.png)
 
-      
-   
+      **说明**
 
-   
-
-9. （可选）将探查结果保存为API。
-
-   1. 单击 **保存为API** 。
-
-      
-   
-   2. 在 **生成api** 对话框中，填写API名称、API Path、API分组和描述。![生成API.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3649390161/p225469.png)
-
-      
-   
-   3. 单击 **OK** 。
-
+      在 **预览图表** 区域单击 **保存为API** ，可将图表信息保存为API。
       
    
 
